--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-bin
-debug
-dep
-obj
-src/glyphs.c
-src/glyphs.h
+# Compilation files of the application
+build/
+
+# Legacy compilation output
+bin/
+debug/
